# mcu_timing

./: .gitignore  CMakeLists.txt  README.md
cmake/: chip_libraries.cmake
mcu_timing/: delay.h  interval.h  profile.h  rate_limit.h  token_bucket_limiter.h
mcu_timing/src/: delay.c  interval.c  profile.c  rate_limit.c  token_bucket_limiter.c
tests/: CMakeLists.txt  profile.test.c  token_bucket_limiter.test.c
tests/mocks/: logging.h  mock_delay.c  mock_logging.c
